CMAKE_MINIMUM_REQUIRED(VERSION 3.0)

PROJECT(test)

SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG .)
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG .)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG .)
SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE .)
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE .)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE .)

SET(CMAKE_VERBOSE_MAKEFILE ON)

ADD_COMPILE_OPTIONS(/GS) 

IF(NOT CMAKE_CXX_STANDARD)
    SET(CMAKE_CXX_STANDARD 14)
ENDIF()
MESSAGE("C++ Standard is " ${CMAKE_CXX_STANDARD})

IF(NOT CMAKE_BUILD_TYPE)
    SET(CMAKE_BUILD_TYPE Debug)
ENDIF()
MESSAGE("Build Type is " ${CMAKE_BUILD_TYPE})



ADD_EXECUTABLE(a.out test.cpp)
